manifests/webhook.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-validation
spec:
  type: ClusterIP
  selector:
    app: nexus-validation
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
