manifests/validating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "nexus-validation.webhook.svc"
webhooks:
  - name: "nexus-validation.webhook.svc"
    rules:
      - apiGroups: ["root.helloworld.com", "config.helloworld.com", "inventory.helloworld.com", "nexus.helloworld.com", "runtime.helloworld.com"]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["*"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: nexus-validation
        path: /validate
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNVENDQWhtZ0F3SUJBZ0lVTXZKY3J0N0Vt
[...]
        PQotLS0tLUVORCBDRVJUSUZJQ0FURS0tLS0tCg==
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
